@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-08-31T08:23:21Z",
+  "timestamp" : "2022-09-01T01:56:12Z",
   "count_outdated" : 2367,
   "uniques_outdated" : 557,
-  "count" : 2400,
-  "uniques" : 579,
+  "count" : 2412,
+  "uniques" : 587,
   "clones" : [
     {
       "timestamp": "2022-08-18T00:00:00Z",
@@ -91,10 +91,10 @@
     },
     {
       "timestamp": "2022-08-31T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
+      "count": 13,
+      "count_minmax": [ 1, 13 ],
+      "uniques": 9,
+      "uniques_minmax": [ 1, 9 ]
     }
   ]
 }
