@@ -1,6 +1,6 @@
 {
-  "count": 33,
-  "uniques": 11,
+  "count": 45,
+  "uniques": 18,
   "clones": [
     {
       "timestamp": "2022-08-18T00:00:00Z",
@@ -64,8 +64,8 @@
     },
     {
       "timestamp": "2022-08-31T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 13,
+      "uniques": 9
     }
   ]
 }
