@@ -1,3 +1,11 @@
+2022-09-01T01:56:12Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/2968336113
+* notice: last 14d: unq all: 18 45
+* notice: prev accum: outdated-unq outdated-all / unq all: 557 2367 / 579 2400
+* notice: next accum: outdated-unq outdated-all / unq all: 557 2367 / 587 2412
+* notice: prev exec diff / last date diff / accum: unq all: +8 +12 -0 -0 / +9 +13 -0 -0 / 9 13
+* notice: removed / changed dates: [] / [2022-08-31]
+
 2022-08-31T08:23:21Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/2962350684
 * notice: last 14d: unq all: 11 33
